# SybolicFusion-CompressionALG

./: README.md  requirements.txt  symbolic_interactive_notebook.ipynb  version.txt
Interactive Demos/: symbolic_demo.ipynb
benchmark/: comparison_table.csv  compression_stats.txt  execution_times.txt
benchmark/benchmark_expanded/: constants_set_benchmark.sym  cycle_count_report.md  error_correction_test.sym  fibonacci_benchmark.sym  macro_recursion_scaling.sym  prime_filter_benchmark.sym  symbolic_encryption_test.sym  symbolic_vs_gzip_comparison.txt
contributing_and_changelog/: CHANGELOG.md  CONTRIBUTING.md
docs/: Symbolic_Pyramid_Reactor_Theory_by_ClarkeBall.md  architecture.md  file_structure.md  introduction.md  testing.md  theory.md
docs/docs-2/: API.md
github_community_files/: CODE_OF_CONDUCT.md  SECURITY.md
index_and_main_sym/: index.sym  main.sym
pypi_packaging_files/: MANIFEST.in  pyproject.toml  setup.cfg
symbolic_encoder_macro_92_3/src/: symbolic_encoder.py
symbolic_encoder_macro_92_3/tests/: test_fibonacci_compression.py
symbolic_examples/: fibonacci.sym  phi.sym  primes.sym  pyramid_CO2_model.sym
symbolic_examples/examples-2/: symbolic_fibonacci.sym  symbolic_prime_filter.sym  symbolic_ratio_pi.sym  symbolic_recursive_pattern.sym
symbolicfusion_clean/: README.md  pyproject.toml
symbolicfusion_clean/symbolicfusion/: __init__.py  core.py
tests/: test_encoder.py  test_macros.py
