[metadata]
name = symbolic-compression
version = 0.1.0
description = Symbolic compression and macro encoding system
long_description = file: README.md
long_description_content_type = text/markdown
author = Clarke Ball
license = MIT
url = https://github.com/yourusername/symbolic-compression
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
