[project]
name = "symbolicfusion"
version = "0.1.0"
description = "Symbolic compression and logic framework."
authors = [{name = "Clarke Ball", email = "your@email.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/yourusername/symbolicfusion"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
